Text highlight colours and a slightly odd email legibility fix cribbed from the dark theme

--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -138,6 +138,22 @@ rgba(253,253,253,0.75) 100%);
   box-shadow: 1px 1px 0px 0px rgba(255, 255, 255, 0.2);
 }
 
+::selection {
+  color: @color-warning; 
+  background: @color-success;
+}
+
+.ignore-in-parent-frame {
+  body {
+    -webkit-filter: invert() hue-rotate(180deg);
+    * {color: @gray-darker;}
+    //* {color: @gray-lighter;}
+  }
+  img {
+    -webkit-filter: invert() hue-rotate(180deg);
+  }
+}
+
 // cribbed from darkside
 .toolbar-window-controls {
   display: flex;
